--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "date-fns": "^4.1.0",
+    "i18next": "^25.6.0",
     "leaflet": "^1.9.4",
     "leaflet-polylinedecorator": "^1.6.0",
     "polyline-encoded": "^0.0.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^16.2.1",
     "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
