--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "i18next": "^25.6.0",
     "leaflet": "^1.9.4",
     "leaflet-polylinedecorator": "^1.6.0",
+    "leaflet.markercluster": "^1.5.3",
     "polyline-encoded": "^0.0.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^16.2.1",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-cluster": "^3.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.12",
