--- a/.github/workflows/update-routes.yml
+++ b/.github/workflows/update-routes.yml
@@ -43,6 +43,6 @@ jobs:
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add public/data/routes.min.json public/data/routes.json
+          git add public/data/routes.min.json
           git commit -m "🚌 Auto-update route data ($(date +'%Y-%m-%d'))"
           git push
