--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,13 @@ dist-ssr
 # Project documentation (internal)
 INSTRUCTIONS.md
 INTERVIEW_PREP.md
+FOXWAY_INTERVIEW_PREP.md
+FOXWAY_QUICK_REFERENCE.md
+KEY_FILES_GUIDE.md
+JOB_ANALYSIS.md
+CV.md
+Ekke Kaha - Full Stack Developer CV 2025.md
+Ekke Kaha - IT Specialist CV 2025 ENG.pdf
 
 # OS-specific files
 Thumbs.db
